# TrashIRC2025

./: CMakeLists.txt  TODO.txt
include/: Networking.hpp
src/: Main.cpp  Networking.cpp
